tests/integration/istioctl/versionanalyze/testdata/servicerolebinding.yaml
apiVersion: rbac.istio.io/v1alpha1
kind: ServiceRoleBinding
metadata:
  name: service-role-binding
spec:
  mode: PERMISSIVE
  roleRef:
    kind: ServiceRole
    name: service-role
  subjects:
  - user: '*'
